tests/negative/runtime/readlines_directory/input.ci
void main() {
    string[] xs = readLines(".");
    print(toString(count(xs)) + "\n");
}
